--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "gatsby": "^2.0.119",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-manifest": "^2.0.17",
+    "gatsby-plugin-netlify": "^2.0.10",
     "gatsby-plugin-offline": "^2.0.23",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-transformer-remark": "^2.2.5",
     "gatsby-transformer-sharp": "^2.1.13",
     "prop-types": "^15.7.1",
     "react": "^16.8.1",
@@ -19,7 +21,10 @@
     "react-helmet": "^5.2.0"
   },
   "keywords": [
-    "moein", "alizadeh", "personal", "blog"
+    "moein",
+    "alizadeh",
+    "personal",
+    "blog"
   ],
   "license": "MIT",
   "scripts": {
@@ -30,9 +35,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/TrueMoein/personal-blog"
+    "url": "https://github.com/TrueMoein/truemoein.ir"
   },
   "bugs": {
-    "url": "https://github.com/TrueMoein/personal-blog/issues"
+    "url": "https://github.com/TrueMoein/truemoein.ir/issues"
   }
 }
