--- a/package.json
+++ b/package.json
@@ -39,5 +39,18 @@
   },
   "bugs": {
     "url": "https://github.com/TrueMoein/truemoein.ir/issues"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "gatsby-plugin-eslint": "^2.0.4",
+    "prettier": "^1.16.4",
+    "prettier-eslint": "^8.8.2"
   }
 }
